whoami/ingress-k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  namespace: whoami
  # annotations:
  #   traefik.ingress.kubernetes.io/router.entrypoints: websecure
  #   traefik.ingress.kubernetes.io/router.tls: "true"
  #   cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  tls:
    - secretName: default-cert
      hosts:
        - '*.$APP_DOMAIN'
        - $APP_DOMAIN
  rules:
    - host: whoami.$APP_DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
