whoami/ingress-traefik.yaml
# ./scripts/env-to-file.sh --file=whoami/ingress-traefik.yaml | k apply -f -
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-whoami
  namespace: whoami
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.$APP_DOMAIN`)
      kind: Rule
      services:
        - name: whoami
          port: whoami-http
          passHostHeader: true
      middlewares:
        - name: plugin-demo
          namespace: default
